--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js" async></script>
     <script src="main.js" async></script>
+    <script src="lib.js"></script>
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
