--- a/index.html
+++ b/index.html
@@ -1,18 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js" async></script>
     <script src="main.js" async></script>
-    <script src="lib.js"></script>
+    <script src="lib.js" async></script>
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
     <div id="settings">
-        aaa
+        <div class="slidecontainer">
+            <input type="range" min="0" max="1" value="0.5" step="0.002" class="slider" id="time">
+            <label for="time">Times</label>
+        </div>
+        <div>
+            <input type="checkbox" id="points" name="scales" checked>
+            <label for="points">Points</label>
+        </div>
+        <div>
+            <input type="checkbox" id="pointsLines" name="scales" checked>
+            <label for="pointsLines">Points and Lines</label>
+        </div>
+        <div>
+            <button id="start">Start</button>
+            <!-- <button id="reset">Start</button> -->
+        </div>
     </div>
 </body>
+
 </html>
