refactor draw function and new function in lib

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
             <label for="time">Times</label>
         </div>
         <div>
-            <input type="checkbox" id="points" name="scales" checked>
+            <input type="checkbox" id="points" name="scales">
             <label for="points">Points</label>
         </div>
         <div>
-            <input type="checkbox" id="pointsLines" name="scales" checked>
+            <input type="checkbox" id="pointsLines" name="scales">
             <label for="pointsLines">Points and Lines</label>
         </div>
         <div>
