--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js" async></script>
     <script src="main.js" async></script>
     <script src="lib.js" async></script>
+    <script src="event.js" async></script>
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
@@ -15,7 +16,7 @@
 <body>
     <div id="settings">
         <div class="slidecontainer">
-            <input type="range" min="0" max="1" value="0.5" step="0.002" class="slider" id="time">
+            <input type="range" min="0" max="1" value="0" step="0.002" class="slider" id="time">
             <label for="time">Times</label>
         </div>
         <div>
@@ -28,6 +29,7 @@
         </div>
         <div>
             <button id="start">Start</button>
+            <button id="animation" disabled>Animation</button>
             <!-- <button id="reset">Start</button> -->
         </div>
     </div>
